# AICodingAgentEssay

./: CodexPrompts.txt  README.md  nonlinear_bvp_solution.eps  pyproject.toml
nonlinear_bvp/: __init__.py  solver.py
scripts/: plot_solution.py
tests/: test_solver.py
