[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlinear-bvp"
version = "0.1.0"
description = "Finite-difference Newton solver for a nonlinear boundary value problem"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
